# audio-noodles

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: check-and-build.yml  formatting.yml
assets/layout/: test.toml  wav_osc.toml
assets/shaders/: 2d.psh  2d.vsh
source/: adsr.cpp  adsr.hpp  audio_noodle.cpp  colors.hpp  common.hpp  input.cpp  input.hpp  log.cpp  log.hpp  midi.cpp  midi.hpp  mixer.cpp  mixer.hpp  processor.cpp  processor.hpp  session.cpp  session.hpp  track.cpp  track.hpp
source/graphics/: device.cpp  device.hpp  renderer.cpp  renderer.hpp  resource.hpp  transform.cpp  transform.hpp
source/graphics/opengl/: device_opengl.cpp  device_opengl.hpp
source/processors/: wav_osc.cpp  wav_osc.hpp
source/ui/: components.hpp  panel.cpp  panel.hpp  panel_manager.cpp  panel_manager.hpp  scene.cpp  scene.hpp  value_system.hpp
